--- a/public/assets/css/preloader.css
+++ b/public/assets/css/preloader.css
@@ -1,13 +1,26 @@
 .preloader {
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
-    font-family: "proxima-nova-soft", sans-serif;
     -webkit-user-select: none;
     overflow: hidden;
     position: relative;
     min-height: 100vh;
     max-height: 100vh;
     height: 100%;
+    z-index: 99999;
+    background: #000;
+    top: 0;
+    left: 0;
+}
+.preloaders {
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+    -webkit-user-select: none;
+    overflow: hidden;
+    position: relative;
+    /* min-height: 100vh;
+    max-height: 100vh;
+    height: 100%; */
     z-index: 99999;
     background: #000;
     top: 0;
@@ -37,7 +50,28 @@
     font-size: 0;
 }
 
+.preloaders .vertical-centered-box {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
 
+.preloaders .vertical-centered-box:after {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    margin-right: -0.25em;
+}
+
+.preloaders .vertical-centered-box .content {
+    box-sizing: border-box;
+    display: inline-block;
+    vertical-align: middle;
+    text-align: left;
+    font-size: 0;
+}
 
 .preloader {
     background: #2A3E5A;
