--- a/public/assets/css/preloader.css
+++ b/public/assets/css/preloader.css
@@ -7,7 +7,7 @@
     min-height: 100vh;
     max-height: 100vh;
     height: 100%;
-    z-index: 99999;
+    /* z-index: 99999; */
     background: #000;
     top: 0;
     left: 0;
@@ -21,7 +21,7 @@
     /* min-height: 100vh;
     max-height: 100vh;
     height: 100%; */
-    z-index: 99999;
+    /* z-index: 99999; */
     background: #000;
     top: 0;
     left: 0;
